[package]
name = "json-pp-rust"
version = "0.1.0"
edition = "2021"
description = "Reads a string from `stdin` parses it as json and prints it out as a pretty json string."
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0" }
serde_json = "1.0"
anyhow = "1.0.52"